# ChatSever

./: CMakeLists.txt
include/: ChatServer.hpp  ChatService.hpp  public.hpp
include/db/: MySQL.hpp
include/model/: userModel.hpp
include/redis/: redis.hpp
src/: Makefile  cmake_install.cmake
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  ChatServer.cpp  ChatService.cpp  main.cpp
src/server/db/: MySQL.cpp
src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemessagemodel.cpp  userModel.cpp
